FP-385: Fix project member cell button & Avoid bug
Problems:
1. 12px font button in tables
    - wrong size came from `DataFiles…` `…Modals & `…ProjectMembers`
2. cropped table button text
    - padding subtracted by legit fix, but removed by rogue global CSS

Solutions:
1.1. Do NOT LET DataFilesModals set font size on table cell buttons.
    - Should Prevent other 12px font buttons in tables.
1.2. Fix INCORRECT font size for project member remove button.
    - Minimal Fix to 12px font buttons in tables.
2.1. LIMIT global button link padding removal to just ManageAccount.
    - Minimal Fix to cropped table button texts.
    - Should Prevent other cropped table button texts.
2.2. ADD MISSING class names to scope ManageAccount markup.
    - Required to Support solution 2.1.

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -25,7 +25,10 @@
     }
 
     /* Overrides bootstrap button */
-    .btn {
+    /* FAQ: Table cell content should be 14px so do not override cell buttons */
+    /* FAQ: The [role="cell"] matches fake <div> cells and real <td> cells */
+    /* WARNING: A <td> cell need not have [role], but this now expects it */
+    .btn:not([role="cell"]) {
       font-size: 12px;
       font-weight: 600;
     }
